--- a/estilos.scss
+++ b/estilos.scss
@@ -4,46 +4,29 @@
 * {
   margin: 0 !important;
   padding: 0 !important;
-  list-style: none;
-  text-decoration: none;
-  border: none;
-  outline: none;
-}
-
-body {
-  font-family: Inter;
-  font-size: 14;
-  font-weight: 300;
-  height: auto;
+  list-style: none !important;
+  text-decoration: none !important;
+  border: none !important;
+  outline: none !important;
 }
 
 /** Sección de Promociones **/
-.promotionSection {
-  width: 100%;
+#promotionTag {
   height: 40px;
   background-color: black;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   gap: 15px;
 }
 
-.promotionSection span {
+#promotionTag span {
   color: #FCC5DA;
   font-family: Nunito Sans;
   font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
   letter-spacing: 2.8px;
   text-transform: uppercase;
 }
 
 /** Barra de Navegación **/
 .navBar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
   height: 50px;
   box-shadow: 0px 10px 25px rgba(252, 197, 218, 0.5);
 }
@@ -86,44 +69,33 @@ body {
   align-items: center;
 }
 
-/**A partir de aquí se maneja directamente el contenido de la pagina como tal.
-Se colocará un comentario al final de esta sección para diferenciar el resto de ubicaciones semanticas.**/
-/** Estilos para First Section o Sección de Encabezado **/
+/**Encabezado o primera sección de contenido**/
 
-.headerSection {
+#headerSection {
   background-color: white;
-  height: 450px;
   text-align: center;
 }
 
-/*La primera sección consta de dos partes. Empezamos definiendo los estilos de la primera de ellas, 
-que sería la sección izquierda.**/
-
-.headerSection h1 {
+#headerSection span {
   color: #FCC5DA;
   font-family: Nunito Sans;
-  font-size: 16px;
   letter-spacing: 4px;
   text-transform: uppercase;
-  margin-bottom: 20px !important;
 }
 
-.headerSection h2 {
+#headerSection h1 {
   color: #F7C4DA;
   font-family: Muthiara -Demo Version-;
-  font-size: 48px;
-  margin-bottom: 20px !important;
 }
 
-.headerSection p {
+#headerSection p {
   text-align: justify;
   font-family: Nunito Sans;
-  font-weight: 400;
 }
 
 /**Botón del encabezado **/
 
-.btn.btn-primary {
+#headerBtn {
   width: 250px;
   height: 40px;
   border-radius: 5px 20px;
@@ -141,23 +113,30 @@ que sería la sección izquierda.**/
 }
 
 
-.btn.btn-primary:hover {
-  background-color: white;
+#headerBtn:hover {
+  background: white;
   color: #000;
-  border: 3px solid #FCC5DA;
+  border: 3px solid #FCC5DA !important;
   transform: scale(1.05);
   opacity: 0.8;
 }
 
+#headLogo {
+  width: auto;
+  height: 175px;
+}
+
+
 /** Estilos para la segunda sección del contenido de la pagina **/
-.secondSection .container-fluid {
+
+#secondSection {
   background: linear-gradient(180deg, #FCC5DA 0%, rgba(252, 197, 218, 0.00) 100%);
   height: auto;
   display: flex;
   align-items: center;
 }
 
-.secondSection .container-fluid img {
+#polygonIcon {
   width: 125px;
   height: 50px;
 }
@@ -186,15 +165,6 @@ que sería la sección izquierda.**/
   gap: 5px;
 }
 
-/** Muestrario de servicios **/
-
-.showcaseItem {
-  width: 300px;
-  height: 300px;
-  border-radius: 15px;
-  background: #FFF;
-  box-shadow: 10px 10px 20px 0px rgba(252, 197, 218, 0.80);
-}
 
 /* Tercera Sección de contenido */
 
@@ -212,30 +182,61 @@ que sería la sección izquierda.**/
   }
 }
 
-.thirdSection h2 {
+#thirdSection h2 {
   color: #FCC5DA;
-  text-align: center;
   font-family: 'Muthiara -Demo Version-', sans-serif;
   font-size: 64px;
   animation: destello 2s infinite;
 }
 
-.thirdSection span {
+#thirdSection span {
   color: #000;
-  text-align: center;
   font-family: Nunito Sans;
   font-size: 16px;
   font-weight: 300;
 }
 
-.thirdSection .col-3 {
-  width: auto !important;
+#themeContainer {
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
-.themePicker,
-.themePicker img {
-  max-width: 250px;
+#themeContainer .themeLogo {
   height: auto;
+  transition: transform 0.3s;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Capa negra semitransparente */
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.3s;
+}
+
+.themeLogo {
+  height: auto;
+  padding: 15px !important;
+  display: none;
+  /* Inicialmente oculto */
+}
+
+#themeContainer:hover .overlay {
+  opacity: 1;
+  /* Mostrar la capa negra al hacer hover */
+}
+
+#themeContainer:hover .themeLogo {
+  display: block;
+  max-width: 85%;
+  /* Mostrar el logo al hacer hover */
 }
 
 /* Estilos generales del footer */
@@ -245,7 +246,11 @@ que sería la sección izquierda.**/
   position: relative;
 }
 
-.background {
+.main-footer span {
+  color: white;
+}
+
+#footerBody {
   height: 300px;
   left: 0px;
   top: 42px;
@@ -261,11 +266,29 @@ que sería la sección izquierda.**/
   position: absolute;
 }
 
-/* Resto de tus estilos aquí */
-
 /**Estilos para el contenido del texto **/
+.sectionContainer{
+  gap: 10px
+}
+.sectionTitle {
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-weight: 800;
+}
 
+.sectionItem {
+font-family: Nunito Sans;
+font-size: 14px;
+font-weight: 400;
+}
 
+.copyrigth {
+  width: 1250px !important;
+  margin: 0 auto !important;
+text-align: center;
+font-family: Nunito Sans;
+font-size: 12px;
+}
 /*Estilos para la Pagina Nosotros*/
 
 /* Estilos para la página Nosotros */
