--- a/estilos.scss
+++ b/estilos.scss
@@ -409,7 +409,7 @@
   text-transform: uppercase;
   text-align: center;
   transition: transform 0.3s ease, opacity 0.3s ease;
-  margin-top: 20px !important;
+  margin: 20px !important;
   border: none;
 }
 
