--- a/estilos.scss
+++ b/estilos.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 /**Las fuentes están instaladas directamente en el "head" del archivo HTML de cada sección**/
+
 * {
   margin: 0 !important;
   padding: 0 !important;
@@ -132,7 +133,6 @@
 
 #headLogo {
   width: auto;
-  height: 175px;
 }
 
 
@@ -270,7 +270,7 @@
 .footerlogo {
   width: 265px;
   height: 85px;
-  left: 587px;
+  left: 40%;
   top: -10px;
   position: absolute;
 }
@@ -299,6 +299,58 @@
   font-family: Nunito Sans;
   font-size: 12px;
 }
+
+/**Estilos para Craft.html**/
+
+#craftHeader h1 {
+  color: #F7C4DA;
+font-family: Nunito Sans;
+font-size: 40px;
+font-weight: 400;
+letter-spacing: 10px;
+text-transform: uppercase;
+}
+
+/** Estilos para Proceso de pedidos **/
+
+.orderSection span {
+  color: #000 !important;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-weight: 200; 
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.orderSection h1 {
+  color: #FCC5DA;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+
+/**Estilos y animación para elementos caja en orderprocess.html **/
+
+@keyframes alternarFondo {
+  0%, 100% {
+      background-image: url(./assets/firstStep.png); /* Primer fondo */
+  }
+  75% {
+      background-image: url(./assets/firstStepAlternate.png); /* Segundo fondo */
+  }
+}
+
+.processItem {
+  width: 250px;
+  height: 250px;
+  border-radius: 15px;
+  animation: alternarFondo 6s ease-in-out infinite; /* Cambia cada 6 segundos (ajusta según sea necesario) */
+}
+
 
 /** Estilos para contact.html**/
 
@@ -391,8 +443,6 @@
   font-family: Nunito Sans;
   font-weight: 400;
 }
-
-
 
 /**Estilos para Botón de Formulario **/
 
