--- a/main.scss
+++ b/main.scss
@@ -99,6 +99,10 @@ i {
 
 }
 
+/**Estilos para Proceso de Compra **/
+.step-content {
+  text-align: justify;
+}
 
 /**Estilos para About Us **/
 .about-content {
